Ajout du numero

--- a/index.html
+++ b/index.html
@@ -166,8 +166,7 @@
   <div class="card-body">
     <h3 style="text-align: center;">Nous contacter</h3>
     <center>
-    	<img src="img/whatsapp.png"> 06 36 10 88 61
-    	<p>Wesh cest comment</p>
+    	<img src="img/whatsapp.png"><a href="tel:+33636108861">06 36 10 88 61</a>
     </center>
     
   </div>
