--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body style="background-color: #d4e4d3;">
 
 	<nav class="navbar navbar-expand-lg" style="background-color: #6f8b8a;">
-  <a class="navbar-brand" href="index.html" style="font-size: 30px;">Translaty</a>
+  <a class="navbar-brand" href="index.html" style="font-size: 30px; color: white;">Translaty</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -30,13 +30,13 @@
   </div>
   <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="index.html">Accueil <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="index.html" style="color: white;">Accueil <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">A propos</a>
+        <a class="nav-link" href="#" style="color: white;">A propos</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Nous contacter</a>
+        <a class="nav-link" href="#" style="color: white;">Nous contacter</a>
       </li>
     </ul>
 </nav>
@@ -166,7 +166,7 @@
   <div class="card-body">
     <h3 style="text-align: center;">Nous contacter</h3>
     <center>
-    	<img src="img/whatsapp.png"><a href="tel:+33636108861">06 36 10 88 61</a>
+    	<a href="tel:+33636108861"><img src="img/whatsapp.png"></a>06 36 10 88 61
     </center>
     
   </div>
