--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
   <div class="card-body">
     <h3 style="text-align: center;">Nous contacter</h3>
     <center>
-    	<a href="https://wa.me/33650597861" class="whatsbouge"><img src="img/whatsapp.png"></a>06 50 59 78 61
+    	<a href="https://wa.me/33650597861"><img src="img/whatsapp.png" class="whatsbouge"></a>06 50 59 78 61
     </center>
     
   </div>
