--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     
   </div>
   <ul class="navbar-nav">
-      <li class="nav-item active">
+      <!-- <li class="nav-item active">
         <a class="nav-link" href="index.html" style="color: white;">Accueil <span class="sr-only">(current)</span></a>
-      </li>
+      </li> -->
       <li class="nav-item">
         <a class="nav-link" href="#services" style="color: white;">Nos services</a>
       </li>
