--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
   <link href="css/style.css" rel="stylesheet">
 
   <link rel="shortcut icon" type="image/jpg" href="img/turc.jpg"/>
-
-  <script type="text/javascript" src="js/all.min.js"></script>
+  <script type="text/javascript" src="js/jquery.min.js"></script>
 
 </head>
 
@@ -49,12 +48,10 @@
   <div class="collapse navbar-collapse" id="navbarNav" align="right">
     
   </div>
-  <select>
-        		<option><img src="img/drapeau-france.jpg">France</option>
-        		<option><img src="img/drapeau-turc.jpg">Turc</option>
-        	</select>
+ 		 <a href="index.html"><img src="img/drapeau-france.jpg"></a>
+ 		 <a href="turkich.html"><img src="img/drapeau-turc.jpg"></a>
   <ul class="navbar-nav">
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" href="index.html" style="color: white;">Accueil <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
@@ -118,6 +115,7 @@
   </a>
   <!--/.Controls-->
 </div>
+
 <h1>Nos traductions assermentées et notariées</h1>
 <h1>La traduction Turc et Français au prix raisonnable</h1>
 <h1>Service de traduction en ligne 7j/7</h1>
@@ -211,7 +209,7 @@
 
   <!-- SCRIPTS -->
   <!-- JQuery -->
-  <script type="text/javascript" src="js/jquery-3.4.0.min.js"></script>
+  <!-- <script type="text/javascript" src="js/jquery-3.4.0.min.js"></script> -->
   <!-- Bootstrap tooltips -->
   <script type="text/javascript" src="js/popper.min.js"></script>
   <!-- Bootstrap core JavaScript -->
