--- a/turkich.html
+++ b/turkich.html
@@ -49,11 +49,10 @@
   <div class="collapse navbar-collapse" id="navbarNav" align="right">
     
   </div>
+    <a href="index.html"><img src="img/drapeau-france.jpg" width="1"></a>
+     <a href="turkich.html"><img src="img/drapeau-turc.jpg" width="1"></a>
   <ul class="navbar-nav">
-    <li class="nav-item">
-        <a class="nav-link" href="index.html" style="color: white;">France</a>
-      </li>
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" href="index.html" style="color: white;">Ana Sayfa <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
@@ -207,7 +206,8 @@
 
   <!-- SCRIPTS -->
   <!-- JQuery -->
-  <script type="text/javascript" src="js/jquery-3.4.0.min.js"></script>
+  <!-- <script type="text/javascript" src="js/jquery-3.4.0.min.js"></script> -->
+  <script type="text/javascript" src="js/jquery.min.js"></script>
   <!-- Bootstrap tooltips -->
   <script type="text/javascript" src="js/popper.min.js"></script>
   <!-- Bootstrap core JavaScript -->
