Ajout des drapeaux mini

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
   <div class="collapse navbar-collapse" id="navbarNav" align="right">
     
   </div>
- 		 <a href="index.html"><img src="img/drapeau-france.jpg"></a>
- 		 <a href="turkich.html"><img src="img/drapeau-turc.jpg"></a>
+ 		 <a href="index.html"><img src="img/drapeau-france.jpg" style="width: 40px;"></a>
+ 		 <a href="turkich.html"><img src="img/drapeau-turc.jpg" style="width: 40px;"></a>
   <ul class="navbar-nav">
       <li class="nav-item active">
         <a class="nav-link" href="index.html" style="color: white;">Accueil <span class="sr-only">(current)</span></a>
