--- a/turkich.html
+++ b/turkich.html
@@ -16,8 +16,7 @@
   <link href="css/style.css" rel="stylesheet">
 
   <link rel="shortcut icon" type="image/jpg" href="img/turc.jpg"/>
-
-  <script type="text/javascript" src="js/all.min.js"></script>
+  <script type="text/javascript" src="js/jquery.min.js"></script>
 
 </head>
 
@@ -49,8 +48,8 @@
   <div class="collapse navbar-collapse" id="navbarNav" align="right">
     
   </div>
-    <a href="index.html"><img src="img/drapeau-france.jpg" width="1"></a>
-     <a href="turkich.html"><img src="img/drapeau-turc.jpg" width="1"></a>
+     <a href="index.html"><img src="img/drapeau-france.jpg" style="width: 40px;"></a>
+     <a href="turkich.html"><img src="img/drapeau-turc.jpg" style="width: 40px;"></a>
   <ul class="navbar-nav">
       <li class="nav-item active">
         <a class="nav-link" href="index.html" style="color: white;">Ana Sayfa <span class="sr-only">(current)</span></a>
